Add RGB to grayscale conversion test algorithm